[package]
name = "ansi-to-tui"
version = "8.0.0"
authors = ["Uttarayan Mondal <email@uttarayan.me>"]
edition = "2024"
description = "A library to convert ansi color coded text into ratatui::text::Text type from ratatui library"
keywords = ["ansi", "ascii", "tui", "parser"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/uttarayan21/ansi-to-tui"

[dependencies]
nom = "8"
ratatui-core = { version = "0.1.0", default-features = false }
simdutf8 = { version = "0.1", optional = true }
smallvec = { version = "1", features = ["const_generics"] }
thiserror = "2"

[dev-dependencies]
anyhow = "1"
criterion = "0.7"
eyre = "0.6"
pretty_assertions = "1.4"

[features]
simd = ["dep:simdutf8"]
zero-copy = []
default = ["zero-copy", "simd"]


[[bench]]
name = "parsing"
harness = false

[profile.bench]
debug = true
