[package]
name = "ansi-to-tui"
version = "8.0.0"
authors = ["Uttarayan Mondal <email@uttarayan.me>"]
edition = "2024"
rust-version = "1.86"
description = "Convert ANSI color and style codes into Ratatui Text"
keywords = ["ansi", "ascii", "ratatui", "parser", "style"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ratatui/ansi-to-tui"
documentation = "https://docs.rs/ansi-to-tui"
homepage = "https://ratatui.rs"

[dependencies]
nom = "8"
ratatui-core = { version = "0.1.0", default-features = false }
simdutf8 = { version = "0.1", optional = true }
smallvec = { version = "1", features = ["const_generics"] }
thiserror = "2"

[dev-dependencies]
anyhow = "1"
criterion = "0.8"
eyre = "0.6"
pretty_assertions = "1.4"

[features]
simd = ["dep:simdutf8"]
zero-copy = []
default = ["zero-copy", "simd"]


[[bench]]
name = "parsing"
harness = false

[profile.bench]
debug = true
